# signal-wrangler

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
cmake/: DefaultBuildRelease.cmake  EnableWarnings.cmake  SgnlConfig.cmake
example/: example.cpp
include/sgnl/: AtomicCondition.h  SignalHandler.h
test/: CMakeLists.txt  test.cpp
